assets/ingress_gitlab-webservice-default.yaml
# Source: gitlab/charts/gitlab/charts/webservice/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gitlab-webservice-default
  namespace: default
  labels:
    app: webservice
    release: gitlab
    gitlab.com/webservice-name: default
  annotations:
    cert-manager.io/issuer: "ca-issuer"
spec:
  rules:
    - host: gitlab.tanzu.demo
      http:
        paths:
          - path: /
            backend:
              serviceName: gitlab-webservice-default
              servicePort: 8181
  tls:
    - hosts:
      - gitlab.tanzu.demo
      secretName: gitlab-gitlab-tls
